Fix style and alignment

--- a/style.css
+++ b/style.css
@@ -14,11 +14,15 @@ body {
   top: 0%;
   width: 100%;
   margin: 0;
-  padding-bottom: 75px;
+  padding: 0;
 }
 
-.navbar-left, .navbar-right {
-  margin: 0 100px 0 100px;
+.navbar-left {
+  margin-left: 100px;  
+}
+
+ .navbar-right {
+  margin-right:100px;
 }
 
 .nav-link {
@@ -34,7 +38,7 @@ ul {
 }
 
 li {
-  margin: 10px;
+  margin: 5px;
   padding: 0;
 }
 
@@ -61,15 +65,16 @@ a:hover {
 .hero {
   flex-direction: row;
   margin: 0;
-  padding-bottom: 100px;
+  padding: 100px 0 100px 0;
   background-color: #CDA34F;
-  gap: 150px;
+  justify-content: space-between;
 }
 
 .hero-left {
   flex-direction: column;
   margin-left: 100px;
   justify-content: center;
+  padding-right: 200px ;
 }
 
 .hero-right {
@@ -129,6 +134,7 @@ a:hover {
   flex-shrink: 0;
   margin: 0;
   gap: 50px;
+  flex-wrap: wrap;
 }
 
 .mushroomtext {
@@ -154,15 +160,19 @@ a:hover {
   flex-direction: column;
   background-color: #373F27;
   align-content: center;
-  padding: 100px 400px;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 100px 0 100px 0;
 }
 
 .quote {
+  width: 900px;
   display: flex;
-  flex-direction: row;
   color: #E9E7DA;
   font-size: 36px;
   font-weight: lighter;
+  flex-wrap: wrap;
+  flex-shrink: 0;
 }
 
 .author {
